# django-mindwiki

./: .dockerignore  MANIFEST.in  Pipfile  README.md  boot_django.py  dev-requirements.txt  load_tests.py  makemigrations.py  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
deployments/: Dockerfile
deployments/ci/: Pipfile
mindwiki/: admin.py  apps.py  forms.py  models.py  urls.py
mindwiki/management/commands/: bookmarks2weblinks.py
mindwiki/markdown_ext/: ext_links.py  snippets.py  utils.py
mindwiki/migrations/: 0001_initial.py
mindwiki/models/: __init__.py  files.py  links.py  pages.py
mindwiki/models/base/: __init__.py
mindwiki/serializers/: __init__.py
mindwiki/templates/: base.html
mindwiki/templates/mindwiki/: base.html  frontpage.html  project_status.html
mindwiki/templates/mindwiki/category/: detail.html  list.html  search.html
mindwiki/templates/mindwiki/file/: detail.html  list.html  search.html
mindwiki/templates/mindwiki/image/: detail.html  list.html  search.html
mindwiki/templates/mindwiki/page/: detail.html  edit.html  list.html  search.html
mindwiki/templates/mindwiki/project/: detail.html  search.html
mindwiki/templates/mindwiki/snippet/: detail.html  edit.html  list.html  (+1 more)
mindwiki/templatetags/: markdown.py  markdown_extras.py  project.py
mindwiki/templatetags/markdown_ext/: __init__.py  ext_links.py  snippets.py
mindwiki/views/: __init__.py  category.py  file.py  image.py  page.py  project.py  snippet.py  tag.py  weblink.py
tests/: test_page.py  test_settings.py  test_tag.py  test_weblink.py
(+8 files in other folders)
