[metadata]
name = django-mindwiki
version = 0.1
description = A Django App to serve as a Personal Wiki
long_description = file: README.md
url = https://github.com/ravenoak/django-mindwiki
author = Caitlyn O'Hanna
author_email = caitlyn.ohanna@gmail.com
license = GPLv3+
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.2
    Intended Audience :: Developers
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.9
install_requires =
    Django >= 4.0
    Pillow
    Pygments
    django-markdownx >= 3.0
    plantuml-markdown >= 3.5
test_suite = load_tests.get_suite
